saving/loading from json added, fixed markdown overflow

--- a/new_todo/static/styles.css
+++ b/new_todo/static/styles.css
@@ -21,6 +21,9 @@ body {
   th {
     background-color: #f4f4f4;
   }
+
+  [v-cloak] > * { display:none }
+ [v-cloak]::before { content: "Loading…" }
   
   .modal {
     display: flex;
@@ -44,11 +47,21 @@ body {
   
   textarea {
     width: 100%;
-    height: 100px;
+    height: 70%;
     resize: none;
   }
+
+.markdown-container {
+    height: 70%;
+    overflow-y: auto;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #fff;
+    font-family: inherit;
+  }
   
-  .status-open {
+.status-open {
     background-color: grey;
     color: white;
 }
